@@ -1,3 +1,10 @@
+2014-06-08  Titus Brown  <t@idyll.org>
+
+    * doc/conf.py: set google_analytics_id and disqus_shortname properly;
+	disable "editme" popup.
+    * doc/_templates/page.html: take google_analytics_id and disqus_shortname
+	from doc/conf.py.
+
 2014-05-09  Luiz Irber  <irberlui@msu.edu>
 
     Version 1.0.1
